--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" accesskey="1" href="home.html" title="Página incial">Home
-                    <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" accesskey="1" href="index.html" title="Página incial">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" accesskey="2" href="formulario.html" title="Direcionar para o formulário de contatos">Formulário</a>
@@ -69,9 +68,9 @@
     <div class="col-sm-6 mx-auto bg-light mt-1 w-90">
       <!-- oculte o header abaixo consulte https://getbootstrap.com.br/docs/4.1/utilities/display/ -->
       <h2 id="home" class="text-center">HOME</h2>
-      <article>
+      <article class="text-center">
           
-
+      <h3>teste do corpo HOME</h3>
 
       </article>
     </div>
