--- a/sobre.html
+++ b/sobre.html
@@ -3,16 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title id="home">Home</title>
+  <title id="home">Sobre</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <!--<script src="scripts/script.js" defer></script>  -->
-  <!--<style src="estilos/estilo.css"> -->
+
   <style>
     .logotipo {
       max-width: 100px;
     }
-    
     a:focus,a:hover {
       border: 1px solid #F00;
     }
@@ -22,21 +20,18 @@
 <body class="container mx-auto bg-light mt-1 w-90">
   <header id="topo">
     <div>
-      <!-- faça com que as duas divs a seguir sejam exibidas lado a lado quando o viewport for maior ou igual a 576px sendo que a primeira deve ocupar 3/12 e a segunda 9/12 consulte: https://getbootstrap.com.br/docs/4.1/layout/grid/ -->
 
       <div class="row text-center">
         <div class="col-sm-1">
           <img src="imagens/logo.png" alt="Logotipo da empresa" class="logotipo">
         </div>
         <div class="col-sm-11 titulo">
-          <!--class="col-sm-9"-->
           <h1>Avalidação Final</h1>
         </div>
       </div>
 
       <div class="row" >
         <div class="col-sm-12">
-          <!-- torne o menu responsivo, conforme o exemplo consulte https://getbootstrap.com.br/docs/4.1/components/navbar/ -->
           <nav id="barra_acessibilidade" class="navbar navbar-expand-lg navbar-light bg-light">
             <button type="button" id="botao_menu" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -44,8 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" accesskey="1" href="home.html" title="Página incial">Home
-                    <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" accesskey="1" href="index.html" title="Página incial">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" accesskey="2" href="formulario.html" title="Direcionar para o formulário de contatos">Formulário</a>
@@ -67,11 +61,10 @@
 
   <aside id="conteudo">
     <div class="col-sm-6 mx-auto bg-light mt-1 w-90">
-      <!-- oculte o header abaixo consulte https://getbootstrap.com.br/docs/4.1/utilities/display/ -->
-      <h2 id="home" class="text-center">HOME</h2>
-      <article>
+      <h2 id="home" class="text-center">SOBRE</h2>
+      <article class="text-center">
           
-
+      <h3>teste do corpo SOBRE</h3>
 
       </article>
     </div>
@@ -82,7 +75,6 @@
       <p>Copyright © 2021</p>
     </div>
   </footer>
-
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
