--- a/formulario.html
+++ b/formulario.html
@@ -73,7 +73,6 @@
   <article>
     <div id="contatos">
       <h2>Formulário de Contato</h2>
-      <!-- torne o formulário responsivo, conforme o exemplo consulte https://getbootstrap.com.br/docs/4.1/components/forms/ -->
 
       <form method="post">
         <div class="form-group row">
@@ -83,18 +82,47 @@
               placeholder="Digite seu nome" autofocus>
           </div>
         </div>
+        
         <div class="form-group row">
-          <label id="labelemail" class="col-sm-2 col-form-label" for="inputemail">Email:</label>
-          <div class="col-sm-10">
-            <input type="email" class="form-control" name="inputemail" id="inputemail" aria-label="inputemail"
-              placeholder="Digite seu email">
+          <label id="labelecep" class="col-sm-2 col-form-label" for="inputcep">CEP:</label>
+          <div class="col-sm-4">
+            <input type="text" class="form-control" name="inputcep" id="cep" aria-label="inputcep" placeholder="Digite seu CEP">
+          </div>
+          <div class="col-sm-4">
+            <input id="btnconsultar" class="btn btn-primary my-1" type="submit" value="Consultar" aria-label="Consultar" />
           </div>
         </div>
+
+
+        <div class="form-group row">
+          <label id="labelrua" class="col-sm-2 col-form-label" for="inputrua">Rua:</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" name="inputrua" id="rua" aria-label="inputrua" placeholder="Digite seu endereço">
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label id="labelemail" class="col-sm-2 col-form-label" for="inputemail">Bairro:</label>
+          <div class="col-sm-5">
+            <input type="email" class="form-control" name="inputemail" id="bairro" aria-label="inputemail" placeholder="Digite seu email">
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label id="labelemail" class="col-sm-2 col-form-label" for="inputemail">Cidade:</label>
+          <div class="col-sm-6">
+            <input type="email" class="form-control" name="inputemail" id="cidade" aria-label="inputemail" placeholder="Digite seu email">
+          </div>
+          <label id="labelemail" class="col-sm-2 col-form-label" for="inputemail">UF:</label>
+          <div class="col-sm-2">
+            <input type="email" class="form-control" name="inputemail" id="uf" aria-label="inputemail" placeholder="Digite seu email">
+          </div>
+        </div>
+
         <div class="form-group row">
           <label id="labelmensagem" class="col-sm-2 col-form-label" for="mensagem">Mensagem:</label>
           <div class="col-sm-10">
-            <textarea class="form-control" name="mensagem" id="mensagem" rows="3" aria-label="mensagem"
-              placeholder="Informe a mensagem"></textarea>
+            <textarea class="form-control" name="mensagem" id="mensagem" rows="3" aria-label="mensagem" placeholder="Informe a mensagem"></textarea>
           </div>
         </div>
         <div class="form-group row">
@@ -112,10 +140,11 @@
       <p>Copyright © 2021</p>
     </div>
   </footer>
-
+  
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="scripts/formulario.js"></script>
   <noscript>Atualize seu navegador</noscript>
   </body>
 
