--- a/imagens.html
+++ b/imagens.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" accesskey="1" href="imagens.html" title="Página incial">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" accesskey="1" href="index.html" title="Página incial">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" accesskey="2" href="formulario.html" title="Direcionar para o formulário de contatos">Formulário</a>
