--- a/index.html
+++ b/index.html
@@ -69,12 +69,27 @@
       <!-- oculte o header abaixo consulte https://getbootstrap.com.br/docs/4.1/utilities/display/ -->
       <h2 id="home" class="text-center">HOME</h2>
       <article class="text-center">
-          
-      <h3>teste do corpo HOME</h3>
 
+        
       </article>
     </div>
   </aside>
+
+  <article>
+    <div id="home">
+      <div class="col-md-6 col-lg-6 pr-lg-5 py-3 py-lg-5">
+        <div class="row justify-content-start py-3 py-lg-5">
+            <div class="col-md-12 heading-section ftco-animate">
+                <span class="subheading">Home</span>
+                <h2 class="mb-4" style="font-size: 44px; text-transform: capitalize;">Avaliação Final</h2>
+                <p>Este trabalho foi realizado utilizando os conceitos abordados durante às aulas do módulo do front-end.</p>
+            </div>
+        </div>
+    </div>
+   
+    </div>
+  </article>
+</aside>
 
   <footer id="rodape" class="footer navbar-fixed-bottom text-center">
     <div class="col-12">
