--- a/formulario.html
+++ b/formulario.html
@@ -61,24 +61,20 @@
 
   <aside id="conteudo">
     <div class="col-sm-6 mx-auto bg-light mt-1 w-90">
-      <h2 id="home" class="text-center">Formulário</h2>
+      <h2 id="home" class="text-center">Formulário de Contato</h2>
       <article class="text-center">
-          
-      <h3>teste do corpo FORMULÁRIO</h3>
-
       </article>
     </div>
   </aside>
 
   <article>
     <div id="contatos">
-      <h2>Formulário de Contato</h2>
 
       <form method="post">
         <div class="form-group row">
           <label id="labelnome" class="col-sm-2 col-form-label" for="inputnome">Nome:</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" name="inputnome" id="inputnome" aria-label="inputnome"
+            <input type="text" class="form-control" name="nome" id="nome" aria-label="inputnome"
               placeholder="Digite seu nome" autofocus>
           </div>
         </div>
@@ -86,10 +82,10 @@
         <div class="form-group row">
           <label id="labelecep" class="col-sm-2 col-form-label" for="inputcep">CEP:</label>
           <div class="col-sm-4">
-            <input type="text" class="form-control" name="inputcep" id="cep" aria-label="inputcep" placeholder="Digite seu CEP">
+            <input type="text" class="form-control" name="cep" id="cep" aria-label="inputcep" placeholder="Digite seu CEP">
           </div>
           <div class="col-sm-4">
-            <input id="btnconsultar" class="btn btn-primary my-1" type="submit" value="Consultar" aria-label="Consultar" />
+            <input id="btnconsultar" class="btn btn-primary my-1" type="button" value="Consultar" aria-label="Consultar" />
           </div>
         </div>
 
@@ -97,37 +93,31 @@
         <div class="form-group row">
           <label id="labelrua" class="col-sm-2 col-form-label" for="inputrua">Rua:</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" name="inputrua" id="rua" aria-label="inputrua" placeholder="Digite seu endereço">
+            <input type="text" class="form-control" name="rua" id="rua" aria-label="inputrua" placeholder="Digite seu endereço">
           </div>
         </div>
 
         <div class="form-group row">
           <label id="labelemail" class="col-sm-2 col-form-label" for="inputemail">Bairro:</label>
           <div class="col-sm-5">
-            <input type="email" class="form-control" name="inputemail" id="bairro" aria-label="inputemail" placeholder="Digite seu email">
+            <input type="email" class="form-control" name="bairro" id="bairro" aria-label="inputemail" placeholder="Digite seu email">
           </div>
         </div>
 
         <div class="form-group row">
           <label id="labelemail" class="col-sm-2 col-form-label" for="inputemail">Cidade:</label>
           <div class="col-sm-6">
-            <input type="email" class="form-control" name="inputemail" id="cidade" aria-label="inputemail" placeholder="Digite seu email">
+            <input type="email" class="form-control" name="cidade" id="cidade" aria-label="inputemail" placeholder="Digite seu email">
           </div>
           <label id="labelemail" class="col-sm-2 col-form-label" for="inputemail">UF:</label>
           <div class="col-sm-2">
-            <input type="email" class="form-control" name="inputemail" id="uf" aria-label="inputemail" placeholder="Digite seu email">
+            <input type="email" class="form-control" name="uf" id="uf" aria-label="inputemail" placeholder="Digite seu email">
           </div>
         </div>
-
-        <div class="form-group row">
-          <label id="labelmensagem" class="col-sm-2 col-form-label" for="mensagem">Mensagem:</label>
-          <div class="col-sm-10">
-            <textarea class="form-control" name="mensagem" id="mensagem" rows="3" aria-label="mensagem" placeholder="Informe a mensagem"></textarea>
-          </div>
-        </div>
+        
         <div class="form-group row">
           <div class="col-sm-10 offset-sm-2">
-            <input class="btn btn-primary my-1" type="submit" value="Enviar" aria-label="Enviar" />
+            <input id="gravar" class="btn btn-success my-1" type="submit" value="Gravar" aria-label="Gravar" />
           </div>
         </div>
       </form>
@@ -141,10 +131,10 @@
     </div>
   </footer>
   
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="scripts/formulario.js"></script>
+  <script src="scripts/formulario.js"></script>
   <noscript>Atualize seu navegador</noscript>
   </body>
 
