--- a/imagens.html
+++ b/imagens.html
@@ -61,24 +61,51 @@
 
   <aside id="conteudo">
     <div class="col-sm-6 mx-auto bg-light mt-1 w-90">
-      <h2 id="home" class="text-center">IMAGENS</h2>
+      <h2 id="home" class="text-center">Imagens</h2>
       <article class="text-center">
-          
-      <h3>teste do corpo IMAGENS</h3>
-
       </article>
     </div>
   </aside>
+
+  <article>
+    <div id="imagens">
+
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="imagens/imagem1.png" alt="Imagem 1">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="imagens/imagem2.png" alt="Imagem 2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="imagens/imagem3.png" alt="Imagem 3">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Próximo</span>
+        </a>
+      </div>
+   
+    </div>
+  </article>
+</aside>
 
   <footer id="rodape" class="footer navbar-fixed-bottom text-center">
     <div class="col-12">
       <p>Copyright © 2021</p>
     </div>
   </footer>
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="scripts/formulario.js"></script>
   <noscript>Atualize seu navegador</noscript>
   </body>
 
