--- a/sobre.html
+++ b/sobre.html
@@ -61,24 +61,48 @@
 
   <aside id="conteudo">
     <div class="col-sm-6 mx-auto bg-light mt-1 w-90">
-      <h2 id="home" class="text-center">SOBRE</h2>
+      <h2 id="home" class="text-center">Sobre</h2>
       <article class="text-center">
-          
-      <h3>teste do corpo SOBRE</h3>
-
       </article>
     </div>
   </aside>
+
+  <article>
+    <div id="contatos">
+
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">Nome</th>
+            <th scope="col">E-mail</th>
+            <th scope="col">Telefone</th>
+            <th scope="col">curso</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Gustavo Maldonado</td>
+            <td>gustavomaldonado@hotmail.com</td>
+            <td>(18) 99712-3456</td>
+            <td>Desenvolvimento de Sistemas</td>
+          </tr>
+        </tbody>
+      </table>
+   
+    </div>
+  </article>
+</aside>
 
   <footer id="rodape" class="footer navbar-fixed-bottom text-center">
     <div class="col-12">
       <p>Copyright © 2021</p>
     </div>
   </footer>
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="scripts/formulario.js"></script>
   <noscript>Atualize seu navegador</noscript>
   </body>
 
