--- a/imagens.html
+++ b/imagens.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title id="home">Imagens</title>
+  <title id="imagens">Imagens</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -61,14 +61,12 @@
 
   <aside id="conteudo">
     <div class="col-sm-6 mx-auto bg-light mt-1 w-90">
-      <h2 id="home" class="text-center">Imagens</h2>
-      <article class="text-center">
-      </article>
+      <h2 id="corpo_imagens" class="text-center">Imagens</h2>
     </div>
   </aside>
 
-  <article>
-    <div id="imagens">
+  
+    <div id="conteudo_imagens">
 
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -93,8 +91,8 @@
       </div>
    
     </div>
-  </article>
-</aside>
+  
+
 
   <footer id="rodape" class="footer navbar-fixed-bottom text-center">
     <div class="col-12">
