--- a/formulario.html
+++ b/formulario.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title id="home">Formulario</title>
+  <title id="formulario">Formulario</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -61,13 +61,10 @@
 
   <aside id="conteudo">
     <div class="col-sm-6 mx-auto bg-light mt-1 w-90">
-      <h2 id="home" class="text-center">Formulário de Contato</h2>
-      <article class="text-center">
-      </article>
+      <h2 id="corpo_formulario" class="text-center">Formulário de Contato</h2>
     </div>
   </aside>
 
-  <article>
     <div id="contatos">
 
       <form method="post">
@@ -122,8 +119,6 @@
         </div>
       </form>
     </div>
-  </article>
-</aside>
 
   <footer id="rodape" class="footer navbar-fixed-bottom text-center">
     <div class="col-12">
