--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title id="home">Home</title>
+  <title id="title_home">Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!--<script src="scripts/script.js" defer></script>  -->
@@ -67,16 +67,12 @@
   <aside id="conteudo">
     <div class="col-sm-6 mx-auto bg-light mt-1 w-90">
       <!-- oculte o header abaixo consulte https://getbootstrap.com.br/docs/4.1/utilities/display/ -->
-      <h2 id="home" class="text-center">HOME</h2>
-      <article class="text-center">
-
-        
-      </article>
+      <h2 id="corpo_home" class="text-center">HOME</h2>
     </div>
   </aside>
 
   <article>
-    <div id="home">
+    <div id="texto_home">
       <div class="col-md-6 col-lg-6 pr-lg-5 py-3 py-lg-5">
         <div class="row justify-content-start py-3 py-lg-5">
             <div class="col-md-12 heading-section ftco-animate">
@@ -89,7 +85,6 @@
    
     </div>
   </article>
-</aside>
 
   <footer id="rodape" class="footer navbar-fixed-bottom text-center">
     <div class="col-12">
