--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title id="home">Sobre</title>
+  <title id="sobre">Sobre</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -61,13 +61,10 @@
 
   <aside id="conteudo">
     <div class="col-sm-6 mx-auto bg-light mt-1 w-90">
-      <h2 id="home" class="text-center">Sobre</h2>
-      <article class="text-center">
-      </article>
+      <h2 id="corpo_sobre" class="text-center">Sobre</h2>
     </div>
   </aside>
 
-  <article>
     <div id="contatos">
 
       <table class="table">
@@ -81,17 +78,15 @@
         </thead>
         <tbody>
           <tr>
-            <td>Gustavo Maldonado</td>
-            <td>gustavomaldonado@hotmail.com</td>
-            <td>(18) 99712-3456</td>
-            <td>Desenvolvimento de Sistemas</td>
+            <td>Gustavo Leite Maldonado</td>
+            <td>gustavolpp@gmail.com</td>
+            <td>(18) 99736-0000</td>
+            <td>Análise e Desenvolvimento de Sistemas</td>
           </tr>
         </tbody>
       </table>
    
     </div>
-  </article>
-</aside>
 
   <footer id="rodape" class="footer navbar-fixed-bottom text-center">
     <div class="col-12">
